--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 		<title>Jasper</title>
-		<link href="style.css" rel="stylesheet">
+		<link href="build/css/style.css" rel="stylesheet">
 	</head>
 	<body>
 	<div style="padding-bottom: 15%;">
