🧠  Use 3dimensional uv values in shader values passing

--- a/src/index.html
+++ b/src/index.html
@@ -10,12 +10,12 @@
     <canvas class="main"></canvas>
   </body>
   <script type="x-shader/x-vertex" id="vertexShader">
-    varying float height;
+    varying vec3 vPos;
 
     void main() {
 
       vec4 worldPosition = modelMatrix * vec4(position, 1.0);
-      height = worldPosition.z;
+      vPos = worldPosition.xyz;
       gl_Position = projectionMatrix * viewMatrix * worldPosition;
     }
   </script>
@@ -24,10 +24,10 @@
     uniform float time;
     uniform vec2 resolution;
 
-    varying float height;
+    varying vec3 vPos;
 
     void main()	{
-        gl_FragColor = vec4(height, 0.0, 0.0, 1.0);
+        gl_FragColor = vec4(vPos.z, 0.0, 0.0, 1.0);
     }
   </script>
 
