--- a/src/index.html
+++ b/src/index.html
@@ -31,16 +31,20 @@
 
     void main() {
       // Pick a coordinate to visualize in a grid
-      vec2 coord = vUv.xz;
+      vec3 coord = vUv.xyz;
+
+      float height = abs(sin(time * 2.0));
+
 
       // Compute anti-aliased world-space grid lines
-      vec2 grid = abs(fract(coord - 0.5) - 0.5) / fwidth(coord);
-      float line = min(grid.x, grid.y);
-
-      float intensity = 1.0 - min(line, 5.);
+      vec3 grid = abs(fract(coord - 0.5) - 0.5) / fwidth(coord);
+      float line = min(min(grid.x, grid.y), grid.z);
 
       // Just visualize the grid lines directly
-      gl_FragColor = vec4(intensity, 0., intensity, 1.0);
+      float intensity = 1.0 - min(line, 1.);
+
+      // Just visualize the grid lines directly
+      gl_FragColor = vec4(0.5* intensity, height, intensity, 1.0);
     }
   </script>
 
