--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
 
   <body>
     <canvas class="main"></canvas>
+    <h1>jasper.wtf</h1>
   </body>
   <script type="x-shader/x-vertex" id="vertexShader">
     varying vec3 vUv;
