🎙  Improve noise mapping

--- a/src/index.html
+++ b/src/index.html
@@ -45,7 +45,7 @@
       float intensity = 1.0 - min(line, 1.);
 
       // Just visualize the grid lines directly
-      gl_FragColor = vec4(0.5* intensity, 0., intensity, 1.0);
+      gl_FragColor = vec4(0.5 * intensity, 0., intensity, intensity);
     }
   </script>
 
