--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,17 @@
   <head>
     <link rel="stylesheet" href="./style.scss" />
     <meta charset="utf-8" />
-    <title>Jasper</title>
+    <meta name="description" content="jasper.wtf " />
+    <meta name="keywords" content="Developer, Vaporwave, Jasper Stam, Github" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, minimum-scale=1.0, user-scalable=no"
+    />
+
+    <meta property="og:title" content="jasper.wtf" />
+    <meta property="og:description" content="home page of jasper stam" />
+    <meta property="og:url" content="https://jasper.wtf" />
+    <title>Jasper.wtf</title>
   </head>
 
   <body>
