🖌  Improve meta tag description

--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
     />
 
     <meta property="og:title" content="jasper.wtf" />
-    <meta property="og:description" content="home page of jasper stam" />
+    <meta property="og:description" content="𝓪𝓮𝓼𝓽𝓱𝓮𝓽𝓲𝓬" />
     <meta property="og:url" content="https://jasper.wtf" />
     <title>Jasper.wtf</title>
   </head>
